# cryorole

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  LICENSE.txt  Points_in_ChimeraX.py  README.md  environment.yml  pyproject.toml  setup.py
Sample/: condensing_domain.star  modifying_domain.star
cryorole/: LandscapeProjection.py  OrientationAnalysis.py  ParticleBacktrack.py  PointSelect.py  __init__.py
cryorole/align/: __init__.py  star_align.py
cryorole/canonicalize/: __init__.py  axis_fit.py  handedness.py  reference_align.py  sign_rules.py  transforms.py
cryorole/cli/: __init__.py  main.py  progress.py
cryorole/core/: __init__.py  density.py  euler_conventions.py  relative_orientation.py  representations.py
cryorole/export/: __init__.py  cs_subset.py  landscape.py  manifest.py  metadata_subset.py  selection_export.py  serialization.py  star_subset.py  visualization.py
cryorole/io/: __init__.py  import_report.py
cryorole/match/: __init__.py  identity.py  matcher.py  overlap_report.py
cryorole/models/: __init__.py  canonicalization_report.py  density_report.py  export_report.py  identity_report.py  landscape.py  landscape_arrays.py  manifest_report.py  match_table.py  policies.py  pose_table.py  ro_result.py  selection.py
cryorole/normalize/: __init__.py  conventions.py  field_mapper.py  pose_normalizer.py  (+1 more)
docs/: AGENTS.md  architecture.md  cryosparc_workflow.md  github_release_file_list.md  installation.md  migration_from_0x.md  output_files.md  production_run_plan.md  quick_start.md  relion_workflow.md  roadmap.md
tests/: conftest.py
(+26 files in other folders)
