[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryorole"
version = "2.0.0a1"
description = "Policy-driven cryo-EM relative-orientation analysis platform."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
]

[project.scripts]
cryorole = "cryorole.cli.main:main"

[tool.setuptools.packages.find]
include = ["cryorole*"]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
